<resources>
    <string name="app_name">CST338FA23_Project2_LibraryApp</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="admin_only_delete_a_user_s_account">Admin Only: Delete a User\'s Account</string>
    <string name="admin_only_add_a_user">Admin Only: Add a User</string>
    <string name="view_books">View Books</string>
    <string name="admin_only_check_users_renting_books">Admin Only: Check Users Renting Books</string>
    <string name="welcome_insert_user_name_here">Welcome</string>
    <string name="return_to_main_page">Return to Main Page</string>
    <string name="create_account">Create Account</string>
    <string name="username_and_password_cannot_exceed_more_than_10_characters">Username and Password cannot exceed more than 10 characters</string>
    <string name="creating_a_user">Creating a User</string>
    <string name="deleting_a_user">Deleting a User</string>
</resources>